Fixes background alignment issue of sign up box.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/animals/partials/_panes.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/animals/partials/_panes.sass
@@ -14,7 +14,7 @@
 .pane-campaign-sign-up
   clear: both
   width: 100%
-  margin: 33% 0 0 0
+  margin: 36% 0 0 0
   h1
     font-family: din-web
     font-size: 23px
